@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "main/version.cc".
 
+2006-05-28	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-79-06-prsim-05-02:
+	  Verified excl-checking works with checkpointing.  
+		State of check-rings is restored upon load, 
+		as inferred from node values.  
+	  Status: merge to trunk
+
+
 2006-05-27	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-79-06-prsim-05-01:
